apps/media/agregarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: agregarr
    app.kubernetes.io/name: agregarr
  name: agregarr
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: agregarr
    app.kubernetes.io/name: agregarr
  type: ClusterIP
